--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@google/generative-ai": "^0.24.1",
     "@qdrant/js-client-rest": "^1.16.2",
     "mongodb": "^7.1.0",
+    "dotenv": "^17.3.1",
     "uuid": "^13.0.0"
   }
 }
